--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Moms Little Helper</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -133,14 +133,14 @@
 		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Product</h1>
+				<h1>Moms Little Helper</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
 				<!-- Special typography from Bootstrap for lead paragraph. -->
 				<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-				<p class="lead">One sentence description.</p>
+				<p class="lead">Busy Mom's find something for your family to do locally that wont break the bank.</p>
 			</div>
 		</div>
 		<div class="row-fluid pitch">
@@ -204,17 +204,21 @@
 			</div>
 			<div class="span5 copy">
 				<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-				porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-				mollis justo velit at nunc. Fusce nec egestas sem. Donec 
-				fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-				volutpat lorem ut congue malesuada. In facilisis scelerisque
-				turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-				quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-				risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-				consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-				rutrum, nunc leo tempus nisl, eu mollis justo velit at 
-				nunc. Fusce nec egestas sem. Donec fringilla.
+				The aim of this website is to provide busy Mom's with help finding
+				cheap things to do with their family. Instead of searching dozens of
+				web-sites, all the local options will be available from a single source.
+
+				Categories include:
+
+				Restaurants: There always seems to be incentives, but which day does your
+				kids get to eat for FREE or half price. Now, all the information will be
+				available from 1 place.
+
+				Free Movies: In the summer, lots of parks host free family movie nights.
+
+				Museums: Check out all the best deals on admissions.
+
+				Movie Theaters: Which day can you go to watch cheap movies.
 				</p>
 			</div>
 		</div>
@@ -222,17 +226,21 @@
 		<div class="row-fluid section2">
 			<div class="span5 offset1 copy copy-right">
 				<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-				porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-				mollis justo velit at nunc. Fusce nec egestas sem. Donec 
-				fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-				volutpat lorem ut congue malesuada. In facilisis scelerisque
-				turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-				quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-				risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-				consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-				rutrum, nunc leo tempus nisl, eu mollis justo velit at 
-				nunc. Fusce nec egestas sem. Donec fringilla.
+				The aim of this website is to provide busy Mom's with help finding
+				cheap things to do with their family. Instead of searching dozens of
+				web-sites, all the local options will be available from a single source.
+
+				Categories include:
+
+				Restaurants: There always seems to be incentives, but which day does your
+				kids get to eat for FREE or half price. Now, all the information will be
+				available from 1 place.
+
+				Free Movies: In the summer, lots of parks host free family movie nights.
+
+				Museums: Check out all the best deals on admissions.
+
+				Movie Theaters: Which day can you go to watch cheap movies.
 				</p>
 			</div>
 			<div class="span5 asset">
