--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <!--button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button-->
 
+			<a class="coinbase-button" data-code="e98d033f243e5b394423769e19ac1658" href="https://coinbase.com/checkouts/e98d033f243e5b394423769e19ac1658">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 			<!-- AddThis Button BEGIN -->
 			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_1"></a>
