--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--button class="btn btn-success btn-large">Preorder</button-->
           </div>
           </div>
           <div class="row-fluid">
